[metadata]
name = pika-stubs-bc
version = 0.1.4
license = MIT
author = Chi-En Wu
author_email = jason.wu@hahow.in
description = PEP-484 stubs for Pika
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/caian-org/pika-stubs
classifiers =
    Development Status :: 1 - Planning
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    Topic :: Software Development :: Libraries
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = pika-stubs-bc
include_package_data = True
python_requires = >=3.6
install_requires =

[options.extras_require]
dev =
    flake8~=3.8.3
    mypy~=0.780
